syntax = "proto3";

package api.financial_settlement.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/wyfcoding/ecommerce/goapi/financial_settlement/v1;v1";

// 财务结算与打款服务。
service FinancialSettlement {
  // 建立结算。
  rpc CreateSettlement(CreateSettlementRequest) returns (CreateSettlementResponse);

  // 批准审核。
  rpc ApproveSettlement(ApproveSettlementRequest) returns (google.protobuf.Empty);

  // 拒绝审核。
  rpc RejectSettlement(RejectSettlementRequest) returns (google.protobuf.Empty);

  // 详情查询。
  rpc GetSettlement(GetSettlementRequest) returns (GetSettlementResponse);

  // 列表检索。
  rpc ListSettlements(ListSettlementsRequest) returns (ListSettlementsResponse);

  // 执行打款。
  rpc ProcessPayment(ProcessPaymentRequest) returns (ProcessPaymentResponse);
}

// 结算实体。
message Settlement {
  // ID。
  uint64 id = 1;
  // 卖家。
  uint64 seller_id = 2;
  // 周期标签。
  string period = 3;
  // 起始日期。
  google.protobuf.Timestamp start_date = 4;
  // 截止日期。
  google.protobuf.Timestamp end_date = 5;
  // 销售总额。
  int64 total_sales_amount = 6;
  // 抽成金额。
  int64 commission_amount = 7;
  // 补贴金额。
  int64 rebate_amount = 8;
  // 其他费用。
  int64 other_fees = 9;
  // 结算总额。
  int64 final_amount = 10;
  // 流程状态。
  string status = 11;
  // 审核人。
  string approved_by = 12;
  // 审核时刻。
  google.protobuf.Timestamp approved_at = 13;
  // 失败理由。
  string rejection_reason = 14;
  // 录入时间。
  google.protobuf.Timestamp created_at = 15;
}

// 建立请求。
message CreateSettlementRequest {
  // 卖家 ID。
  uint64 seller_id = 1;
  // 周期名。
  string period = 2;
  // 起始。
  google.protobuf.Timestamp start_date = 3;
  // 结束。
  google.protobuf.Timestamp end_date = 4;
}

// 建立回执。
message CreateSettlementResponse {
  // 结算对象。
  Settlement settlement = 1;
}

// 批准请求。
message ApproveSettlementRequest {
  // 记录 ID。
  uint64 id = 1;
  // 操作员。
  string approved_by = 2;
}

// 拒绝请求。
message RejectSettlementRequest {
  // 记录 ID。
  uint64 id = 1;
  // 原因。
  string reason = 2;
}

// 查询。
message GetSettlementRequest {
  // 记录 ID。
  uint64 id = 1;
}

// 查询响应。
message GetSettlementResponse {
  // 结算详情。
  Settlement settlement = 1;
}

// 检索请求。
message ListSettlementsRequest {
  // 卖家筛选。
  uint64 seller_id = 1;
  // 数量。
  uint32 page_size = 2;
  // 页码。
  uint32 page_num = 3;
}

// 检索结果。
message ListSettlementsResponse {
  // 记录序列。
  repeated Settlement settlements = 1;
  // 总笔数。
  uint64 total_count = 2;
}

// 支付详情。
message SettlementPayment {
  // 记录 ID。
  uint64 id = 1;
  // 关联结算单。
  uint64 settlement_id = 2;
  // 接收商家。
  uint64 seller_id = 3;
  // 支付金额。
  int64 amount = 4;
  // 支付状态。
  string status = 5;
  // 渠道流水。
  string transaction_id = 6;
  // 到账时间。
  google.protobuf.Timestamp completed_at = 7;
  // 创建时间。
  google.protobuf.Timestamp created_at = 8;
}

// 支付请求。
message ProcessPaymentRequest {
  // 结算单 ID。
  uint64 settlement_id = 1;
}

// 支付响应。
message ProcessPaymentResponse {
  // 支付档案。
  SettlementPayment payment = 1;
}
